fixed appirio-tech/topcoder-app/issues/1091 added scroll to x overflow

--- a/src/css/challenge-detail-software.css
+++ b/src/css/challenge-detail-software.css
@@ -429,6 +429,9 @@ h1.center {
     padding-right: 20px;
 }
 
+.challenge-detail .tableWrap pre {
+    overflow-x: auto;
+}
 .challenge-detail .currentTab-checkpoints .tableWrap,
 .challenge-detail .currentTab-submissions .tableWrap,
 .challenge-detail .currentTab-winner .tableWrap {
